--- a/progetto.ipynb
+++ b/progetto.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>Progetto per il corso Programmazione di Appl</h1>"
+    "<h1>Progetto per il corso Programmazione di Applicazioni Data Intensive</h1>"
    ]
   },
   {
