--- a/progetto.ipynb
+++ b/progetto.ipynb
@@ -76,11 +76,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import urllib.request\n",
+    "import zipfile\n",
+    "\n",
+    "if not os.path.exists(\"dataset\"):\n",
+    "    os.makedirs(\"dataset\")\n",
+    "if not os.path.exists(os.path.join(\"dataset\", \"datatraining.txt\")):\n",
+    "    url = \"https://archive.ics.uci.edu/ml/machine-learning-databases/00357/occupancy_data.zip\"\n",
+    "    urllib.request.urlretrieve(url, \"data.zip\")\n",
+    "    zip_ref = zipfile.ZipFile(\"data.zip\", 'r')\n",
+    "    zip_ref.extractall(\"dataset\")\n",
+    "    zip_ref.close()\n",
+    "    os.remove(\"data.zip\")\n",
+    "    \n",
     "\n",
     "occupancy_dataset = pd.read_csv(os.path.join(\"dataset\", \"datatraining.txt\"))\n",
     "occupancy_dataset_test = pd.read_csv(os.path.join(\"dataset\", \"datatest.txt\"))\n",
